@@ -1,3 +1,13 @@
+Fri Aug 08 22:00:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimBListWindow.h:
+	* src/QGaimBuddyList.cpp:
+	* src/QGaimBuddyList.h:
+	* src/main.cpp:
+	  - Added the Show Offline Buddies feature that many users seem to
+	    want so badly in a Qtopia IM client.
+
 Fri Aug 08 20:58:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
